--- a/tugas-harian-part-2/src/css/style.css
+++ b/tugas-harian-part-2/src/css/style.css
@@ -41,3 +41,33 @@ input{
     border: 1;
     border-radius: 35px;
 }
+.tabel td,
+.tabel th {
+  border: 2px solid #ddd;
+  padding: 10px;
+}
+td {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ff7f50;
+  color: black;
+}
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: grey;
+  color: black;
+}
+
+table.tabel {
+  margin-left: auto; 
+  margin-right: auto;
+  margin-bottom: 20px;
+  width: 50%;
+  font-family: 'Times New Roman', Times, serif;
+  color: #000;
+  border-collapse: collapse;
+  border: 5px solid white;
+}
