--- a/tugas-harian-part-2/src/css/table.css
+++ b/tugas-harian-part-2/src/css/table.css
@@ -1,6 +1,5 @@
 table {
     font-family: 'Times New Roman', Times, serif;
-    color:  #444;
     border-collapse: collapse;
     width: 60%;
     margin-top: 20px;
@@ -13,17 +12,67 @@ th, td {
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
-.button {
-    background-color: #ddd;
-    padding: 10px ;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin: 4px 2px;
+button {
+    background-color: #c9c9c9;
+    padding: 7px ;
+    margin-right: 15px;
     cursor: pointer;
-    border-radius: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 60px;
 }
   
-.button:hover {
+button:hover {
+    background-color: #f1f1f1;
+}
+
+.container{
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 1px solid rgb(196, 194, 194);
+    border-radius: 5px;
+    padding: 20px;
+}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.col-25 {
+    font-weight: bold;
+    font-size: 16px;
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+    text-align: left;
+}
+.col-75{
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+input{
+    display: inline-block;
+    float: right;
+    width: 50%;
+    margin-bottom: 15px;
+    margin-right: 15px;
+    padding: 7px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input[type=submit] {
+    background-color: #c9c9c9;
+    padding: 7px ;
+    margin-right: 15px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    width: 80px;
+}
+input[type=submit]:hover {
     background-color: #f1f1f1;
 }
