--- a/tugas-harian-part-2/src/css/table.css
+++ b/tugas-harian-part-2/src/css/table.css
@@ -6,7 +6,9 @@ table {
     margin-left: auto; 
     margin-right: auto;
   }
-  
+h1 {
+    text-align: center;
+}  
 th, td {
     padding: 8px 20px;
     text-align: center;
