--- a/tugas-harian-part-2/src/css/table.css
+++ b/tugas-harian-part-2/src/css/table.css
@@ -1,7 +1,10 @@
+* {
+    text-decoration: none;
+}
 table {
     font-family: 'Times New Roman', Times, serif;
     border-collapse: collapse;
-    width: 60%;
+    width: 80%;
     margin-top: 20px;
     margin-left: auto; 
     margin-right: auto;
@@ -14,22 +17,9 @@ th, td {
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
-button {
-    background-color: #c9c9c9;
-    padding: 7px ;
-    margin-right: 15px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    width: 60px;
-}
-  
-button:hover {
-    background-color: #f1f1f1;
-}
 
 .container{
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -67,14 +57,75 @@ input{
 }
 
 input[type=submit] {
-    background-color: #c9c9c9;
-    padding: 7px ;
-    margin-right: 15px;
-    cursor: pointer;
+  width: 100px;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+.btn-primary {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+.btn-danger {
+    background-color: #f44336; 
     border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-right: 10px;
+    border-radius: 10px;
+  }
+.btn-info {
+    background-color: #008CBA; 
+    width: 150px;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
     border-radius: 5px;
-    width: 80px;
-}
-input[type=submit]:hover {
-    background-color: #f1f1f1;
-}
+    margin-right: 150px;
+  }
