--- a/quiz-3/src/assets/css/style.css
+++ b/quiz-3/src/assets/css/style.css
@@ -11,16 +11,16 @@ body {
      list-style: none;
      box-sizing: border-box;
 }
-.header {
+header {
     background-color: #fff;
     height: 80px;
     width: 100%;
 }
 .logo {
-    width: 150px;
+    width: 200px;
     position: absolute;
-    top: 17px;
-    left: 5%;
+    top: 15px; 
+    left: 6%;
 }
 .image {
     padding-left:10px ;
@@ -28,11 +28,12 @@ body {
 }
 nav ul {
     float: right;
-    margin-right: 25px;
+    padding-right: 60px;
+    margin-right: 40px;
 }
 nav ul li {
     display: inline-block;
-    line-height: 80px;
+    padding-top:30px;
     margin: 0 5px;
 }
 nav ul li a{
@@ -175,7 +176,6 @@ input[type=submit] {
   margin-right: 10px;
   border-radius: 10px;
 }
-
 .btn-primary {
   background-color: #4CAF50; /* Green */
   border: none;
@@ -222,6 +222,9 @@ input[type=submit] {
     margin: auto;
     text-align: center;
     font-family: arial;
+}
+.form-search input {
+    float: left;
 }
 
 @media (max-width: 1118px){
